Final fix for modal visibility: move to inline style purely controlled by JS

--- a/style.css
+++ b/style.css
@@ -292,10 +292,6 @@ textarea {
 }
 
 /* Modal */
-.hidden {
-    display: none !important;
-}
-
 .modal {
     position: fixed;
     top: 0;
